2002-01-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.firstmatch): Also pass if
	cdb.error is raised while matching a CDB file.

	* Defaults.py (RECIPIENT_HEADER): New variable specifying the
	header whose contents will be taken as the envelope recipient of
	the message.

2002-01-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.firstmatch): Add support for
	matching lists of addresses contained within a Mailman
	configuration database.

2002-01-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (TMDA): 0.43+ --> 0.44.
	(TMDA): 0.44 --> 0.44+.

2002-01-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDARC): Let tmda-filter catch the exception if
	there is one raised when trying to read the ~/.tmdarc.

2002-01-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Errors.py: import of sys and Defaults no longer necessary, and
	leave the exit EX_TEMPFAIL.to tmda-filter.

2002-01-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_msgid): Add a random integer to the message id to
	strengthen its uniqueness.

2002-01-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (LOGFILE_INCOMING): Replaces LOGFILE.

	(LOGFILE_DEBUG): New logfile to hold the tracebacks generated by
	uncaught exceptions.

2001-12-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (unixdate): New function to return a date string in the
	same format as the UNIX `date' command.

2001-12-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (TMDA): 0.42+ --> 0.43.
	(TMDA): 0.43 --> 0.43+.

	* Errors.py: New module to hold TMDA custom exceptions.
	
2001-12-17  Matt Armstrong  <matt@lickey.com>

	* Cookie.py (make_keyword_cookie): Substitute '?' for keyword
	chars not part of an RFC2822 atom.  This prevents us from creating
	an invalid keyword address.
